# rss_turtlebot

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  install-deps.sh
launch/: boot.launch  milestone2.launch  simulation.launch  stupid_milestone1.launch  stupid_milestone1b.launch
src/lidar_filter/: CMakeLists.txt  package.xml
src/lidar_filter/launch/: lidar_filter.launch
src/lidar_filter/src/: lidar_filter.cpp
src/rss_control/: CMakeLists.txt  package.xml
src/rss_control/config/: twist_mux_locks.yaml  twist_mux_topics.yaml
src/rss_control/launch/: a-star.launch  controller.launch  dummy_path.launch  mux.launch
src/rss_control/src/: PID.cpp  PID.hpp  a_star.cpp  a_star.hpp  controller.cpp  controller.hpp  dummy_path.cpp  utils.cpp
src/rss_description/: CMakeLists.txt  package.xml
src/rss_description/models/battleground/: model.config  model.sdf
src/rss_description/models/battleground/meshes/: battleground.dae
src/rss_description/models/box/: model.sdf
src/rss_description/models/button/: model.config  model.sdf
src/rss_description/models/rock/: model.config  model.sdf
src/rss_description/nodes/: arm_control.py
src/rss_description/rviz/: rss.perspective  turtlebot.rviz
src/rss_description/urdf/: px100.urdf.xacro  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_for_open_manipulator.urdf.xacro  turtlebot3_waffle_pi_px100_arm.urdf.xacro
src/rss_description/worlds/: rss.world
src/rss_ik/: CMakeLists.txt  package.xml
src/rss_ik/include/rss_ik/: Sequences.h
src/rss_ik/msg/: SendIKCommand.msg
src/rss_ik/src/: command_server.cpp  ik_server.cpp
src/rss_ik/srv/: GetTargetJointAngles.srv
src/rss_localization/: CMakeLists.txt  package.xml
src/rss_localization/doc/: motion_noise_estimation.ipynb  turtlebot_commands.pkl
src/rss_localization/include/rss_grid_localization/: LidarMeasurementModel.h  MapHandler.h  MeasurementModel.h  MotionModel.h  OdometryMotionModel.h  ParticleFilterStateEstimator.h  ScanProcessor.h  util.h
src/rss_localization/src/: LidarMeasurementModel.cpp  MapHandler.cpp  MapHandler.h  MotionModel.h  OdometryMotionModel.cpp  ParticleFilterStateEstimator.cpp  ScanProcessor.cpp  localization.cpp
src/rss_map_image_server/: CMakeLists.txt  package.xml
src/rss_map_image_server/config/: map_params.yaml
src/rss_map_image_server/launch/: default.launch
src/rss_map_image_server/scripts/: map_image_loader.py  map_image_saver.py
src/rss_map_image_server/src/: map_image_server.py
src/rss_map_image_server/srv/: LoadMap.srv  SaveMap.srv
src/rss_obstacle_avoidance/: CMakeLists.txt  package.xml
src/rss_obstacle_avoidance/src/: ObstacleAvoidance.cpp  ObstacleAvoidance.h  rss_obstacle_avoidance_node.cpp
src/rss_state_machine/: CMakeLists.txt  package.xml
src/rss_state_machine/config/: rss_state_machine.yaml
src/rss_state_machine/nodes/: rss_state_machine.py
src/rss_state_machine/roslaunch/: rss_state_machine.launch
