<?xml version="1.0"?>
<package format="2">
  <name>rss_control</name>
  <version>0.0.0</version>
  <description>The rss_control package</description>

  <maintainer email="ignat@todo.todo">ignat</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>twist_mux</depend>

  <export>
  </export>
</package>
