<?xml version="1.0"?>
<package format="2">
  <name>rss_localization</name>
  <version>0.0.0</version>
  <description>The rss_localization package</description>

  <maintainer email="alex@todo.todo">alex</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
