<?xml version="1.0"?>
<package format="2">
  <name>rss_state_machine</name>
  <version>0.0.0</version>
  <description>The rss_state_machine package</description>

  <maintainer email="ignat@todo.todo">ignat</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>python_numpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
